# wynd-contracts

./: Cargo.toml  README.md
.circleci/: config.yml
artifacts/: checksums.txt  checksums_intermediate.txt  wynd_faucet.wasm  wynd_invest.wasm  wynd_oracle.wasm
contracts/wynd-faucet/: Cargo.toml  README.md
contracts/wynd-faucet/examples/: schema.rs
contracts/wynd-faucet/schema/: calls_response.json  config.json  execute_msg.json  instantiate_msg.json  query_msg.json
contracts/wynd-faucet/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/wynd-invest/: Cargo.toml
contracts/wynd-invest/examples/: schema.rs
contracts/wynd-invest/schema/: config.json  execute_msg.json  info_response.json  instantiate_msg.json  list_investments_response.json  query_msg.json
contracts/wynd-invest/src/: contract.rs  error.rs  lib.rs  msg.rs  r3.rs  state.rs
contracts/wynd-oracle/: Cargo.toml
contracts/wynd-oracle/examples/: schema.rs
contracts/wynd-oracle/src/: contract.rs  msg.rs  state.rs
scripts/: set_version.sh
