[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.wynd-faucet]
codegen-units = 1
incremental = false

[profile.release.package.wynd-oracle]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
